[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/parallax background/plx-1.png" type="Texture" id=1]
[ext_resource path="res://Assets/parallax background/plx-3.png" type="Texture" id=2]
[ext_resource path="res://Assets/parallax background/plx-5.png" type="Texture" id=3]
[ext_resource path="res://Assets/parallax background/plx-4.png" type="Texture" id=4]
[ext_resource path="res://Assets/parallax background/plx-2.png" type="Texture" id=5]
[ext_resource path="res://Assets/Fonts/Romulus.tres" type="DynamicFont" id=7]
[ext_resource path="res://Assets/Terrains/continue-hover.png" type="Texture" id=8]
[ext_resource path="res://Assets/Terrains/exit-dead.png" type="Texture" id=9]
[ext_resource path="res://Assets/Terrains/continue.png" type="Texture" id=10]
[ext_resource path="res://Assets/Terrains/exithover-dead.png" type="Texture" id=11]
[ext_resource path="res://TitleScreens/Continue.gd" type="Script" id=12]

[node name="Continue" type="Node"]
script = ExtResource( 12 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="Sprite2" type="Sprite" parent="."]
texture = ExtResource( 5 )
centered = false

[node name="Sprite3" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="Sprite4" type="Sprite" parent="."]
texture = ExtResource( 4 )
centered = false

[node name="Sprite5" type="Sprite" parent="."]
texture = ExtResource( 3 )
centered = false

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.374, 0.367 )
limit_left = 0
limit_top = 0
limit_right = 384
limit_bottom = 220

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 0.375
anchor_bottom = 0.367
margin_top = 30.0
margin_bottom = -30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 120.0
margin_right = 264.0
margin_bottom = 160.0
size_flags_horizontal = 4
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 144.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Game Over"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 22.0
margin_top = 45.0
margin_right = 122.0
margin_bottom = 109.0
size_flags_horizontal = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 100.0
margin_bottom = 30.0
texture_normal = ExtResource( 10 )
texture_focused = ExtResource( 8 )

[node name="TextureButton2" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 100.0
margin_bottom = 64.0
texture_normal = ExtResource( 9 )
texture_focused = ExtResource( 11 )
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/TextureButton2" to="." method="_on_TextureButton2_pressed"]
